# my_math

./: Analise.cpp  Analise.h  CMakeLists.txt  Config.h.in  current.cpp  current.h  main.cpp  my_binary.cpp  my_binary.h  my_functions.cpp  my_functions.h  my_gauss.cpp  my_gauss.h  my_geometry.cpp  my_geometry.h  my_graph.cpp  my_graph.h  my_math.h  my_matrix.cpp  my_matrix.h  my_special_relativity.cpp  my_special_relativity.h  my_vector.cpp  my_vector.h  my_vectors.cpp
Google_tests/: CMakeLists.txt  MatrixTest.cpp  VectorTest.cpp
Google_tests/basic_tests/: CMakeLists.txt  MatrixTest.cpp
MyMathLib/: CMakeLists.txt
MyMathLib/include/: Analise.h  my_math.h  my_special_relativity.h  my_vector.h
MyMathLib/source/: Analise.cpp  current.cpp  my_binary.cpp  my_functions.cpp  my_gauss.cpp  my_geometry.cpp  my_graph.cpp  my_matrix.cpp  my_special_relativity.cpp  my_vector.cpp
lib/: my_math.h
lib/analise/: Analise.h
lib/current/: current.cpp  current.h
lib/functions/: my_functions.cpp
lib/gauss/: my_gauss.cpp  my_gauss.h
lib/geometry/: my_geometry.h
lib/graph/: my_graph.cpp  my_graph.h
lib/matrix/: my_matrix.h
lib/vector/: my_vector.cpp
